fix SEO and make icon smaller

--- a/resources/sass/_articles.scss
+++ b/resources/sass/_articles.scss
@@ -9,6 +9,13 @@
             }
         }
     }
+
+    .card-subtitle{
+        font-size: .9rem;
+        svg{
+            transform:scale(0.7)
+        }
+    }
     
 }  
 
